tests/errors/scalar_reassignment_requires_cast.dang
# Reassignment to an ID! slot requires an explicit cast.
let id = "abc" :: ID!
id = "def"
